# se-toolkit-lab-7

./: README.md  docker-compose.yml
bot/: Dockerfile  PLAN.md  bot.py  config.py  pyproject.toml
bot/handlers/: __init__.py  health.py  help.py  labs.py  scores.py  start.py
bot/services/: intent_router.py  llm_client.py  lms_api.py
